<!--
  ~ Pomodoro Productivity Timer
  ~ Copyright (C) 2016  Lisun Andrii
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="app_name">Pomodoro Timer</string>

    <!--Do not translate-->
    <string name="work_session_duration_key" translatable="false">work_session_duration</string>
    <string name="short_break_duration_key" translatable="false">short_break_duration</string>
    <string name="long_break_duration_key" translatable="false">long_break_duration</string>
    <string name="long_break_interval_key" translatable="false">long_break_interval</string>
    <string name="time" translatable="false">%1$02d:%2$02d</string>
    <string name="percentage" translatable="false">%1$.1f%%</string>
    <!--just set country(locale) specific format-->
    <string name="date_formater_string" translatable="false">dd.MM.yyyy, HH:mm</string>
    <!--End of do not translate-->

    <!--Translate only "h" and "m" - hours and minutes-->
    <string name="statistics_time">%1$dh%2$dm</string>

    <string name="time_init">00:00</string>

    <!--Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_timer">Timer</string>
    <string name="drawer_item_projects">Projects</string>
    <string name="drawer_item_statistics">Summary</string>
    <string name="drawer_item_settings">Settings</string>

    <!--Preferences-->
    <string name="pref_category_general">General</string>
    <string name="pref_summary_n_minutes">%1$s minutes</string>
    <string name="pref_summary_n_intervals">%1$s intervals</string>

    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">CANCEL</string>
    <string name="dialog_new_project_title">New project</string>
    <string name="menu_project_overflow_rename">Rename</string>
    <string name="menu_project_overflow_delete">Delete</string>
    <string name="dialog_rename_project_title">Rename project</string>

    <string name="snack_msg_deleted">Project \"%1$s\" deleted</string>
    <string name="snack_msg_created">Project \"%1$s\" created</string>
    <string name="snack_msg_renamed">Project renamed to \"%1$s\"</string>
    <string name="snack_msg_no_projects">You have no projects</string>
    <string name="snack_undo">UNDO</string>
    <string name="work_prompt">Work</string>
    <string name="break_prompt">Break</string>
    <string name="long_break_prompt">Long break</string>
    <string name="break_dialog_title">Break time</string>
    <string name="break_dialog_message">Take a break?</string>
    <string name="break_dialog_take">Take</string>
    <string name="break_dialog_skip">Skip</string>
    <string name="sessions_completed_today">Sessions completed today</string>
    <string name="unknown_project_name">No project/Unknown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="statistics_total_worked">Total worked</string>
    <string name="statistics_worked_percentage">Worked percentage</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this project?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>

    <string name="notification_title">%1$s in progress</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_break_title">Break</string>
    <string name="notification_break_content">Take a break?</string>
    <string name="notification_break_take_action">Take</string>
    <string name="notification_break_skip_action">Skip</string>
    <string name="notification_time_left_plural">%1$d minutes left</string>
    <string name="notification_time_left_singular">%1$d minute left</string>
    <string name="notification_work_title">Work</string>
    <string name="notification_work_content">Time to work. Ready?</string>
    <string name="notification_start">Start</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="projects_error_loading">Error loading projects</string>
    <string name="projects_error_renaming">Error renaming project</string>
    <string name="projects_error_creating">Error creating project</string>
    <string name="projects_error_deleting">Error deleting project</string>
    <string name="statistics_error_loading">Error loading statistics</string>
    <string name="timer_error_loading_total_quantity">Error loading today\'s finished projects quantity</string>
    <string name="timer_error_loading_projects">Error loading projects</string>
    <string name="preferences_error_loading">Error loading preferences</string>
    <string name="preferences_error_saving">Error saving preferences</string>
    <string name="statistics_no_statistics">You have no statistics yet. Try to work at least one session</string>
    <string name="drawer_item_backup">Backup</string>
    <string name="backup_btn_backup">Backup</string>
    <string name="backup_error_loading">Error occurred while loading backups</string>
    <string name="backup_no_backups">You have no backups. Try to create them</string>
    <string name="backup_new_created">New backup successfully created</string>
    <string name="backup_error_creating">Error creating backup file. Please, try again</string>
    <string name="menu_backup_overflow_restore">Restore</string>
    <string name="menu_backup_overflow_to_drive">To Google Drive</string>
    <string name="backup_restored">Backup successfully restored</string>
    <string name="backup_error_restoring">Error restoring backup</string>

    <string-array name="toolbar_spinner_values">
        <item>Today</item>
        <item>Week</item>
    </string-array>
</resources>
