<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Pomodoro Productivity Timer
  ~ Copyright (C) 2016  Lisun Andrii
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_start_timer_24dp"
            android:title="@string/drawer_item_timer" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_assignment_24dp"
            android:title="@string/drawer_item_projects" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics_24dp"
            android:title="@string/drawer_item_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/drawer_item_settings" />

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup_24dp"
            android:title="@string/drawer_item_backup" />
    </group>

</menu>
